--- a/app/crearEventos/crearEventos.html
+++ b/app/crearEventos/crearEventos.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/cssCrearEvento.css">
+<link rel="stylesheet" type="text/css" href="css/cssCrearEvento.css" xmlns="http://www.w3.org/1999/html">
 
 <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
 
@@ -9,8 +9,8 @@
         </div>
 
         <div>
-            <div class="col-xs-12 contentCard white-bg" STYLE="padding-top: 5px;padding-bottom :20px">
-                <h5>TITULO DEL EVENTO</h5>
+            <div class="col-xs-12 contentCard white-bg" STYLE="padding-top: 10px;padding-bottom :20px">
+                <STRONG>TITULO DEL EVENTO</STRONG>
 
                 <div class="col-xs-12 padd-0-l col-sm-6 col-lg-8 text-left padd-0-xs">
                     <input required ng-model="newEvent.name" type="text" required="required"
@@ -27,13 +27,21 @@
         <div
                 data-width="1350" data-resize="true" data-originalsize="false" data-height="500" data-editstart="true"
                 class="col-xs-12 padd-20-tb contentCard white-bg image-file-container "
+
                 ng-click="openFileInput()" alt="portada evento"
         >
             <input accept="image/x-png,image/gif,image/jpeg" class="mdl-cell hidden"
                    style="width: 100%; height:100%;cursor: pointer;position: absolute;" type='file' id="imgInp"/>
-            <img class="mdl-cell"
-                 style="height: 389px; width: 1045px;     content: '¡Arrastra tu imagen aquí o haz clic para añadir!';"
-                 id="blah" src="{{newEvent.image}}"/>
+            <STRONG>PORTADA DEL EVENTO</STRONG>
+
+            <img class="mdl-cell" ;
+                 style="height: 389px; border: dotted; border-color: whitesmoke; width: 1045px; background: ghostwhite"
+                 id="blah" src="{{newEvent.image}}">
+            </img>
+            <BR>
+            <strong>HAZ CLIC PARA AÑADIR </strong>
+            <BR>
+            Recomendamos (1350 x 450 px)
 
         </div>
 
@@ -50,7 +58,8 @@
 
 
         <div class="col-xs-12 contentCard white-bg" STYLE="padding-top: 5px;padding-bottom :60px">
-            <h6>HORARIOS</h6>
+            <STRONG>HORARIOS</STRONG>
+            <BR>
             <div style="float: left; width:50%;overflow:hidden;">
                 <md-input-container class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
                     <input mdc-datetime-picker="" date="true" time="true" type="text" id="datetime1"
@@ -75,7 +84,7 @@
 
         <div>
             <div class="col-xs-12 contentCard white-bg" STYLE="padding-top: 5px;padding-bottom :20px">
-                <h6>DESCRIPCION</h6>
+                <STRONG>DESCRIPCION</STRONG>
                 <md-input-container class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone md-block">
 
                     <textarea required ng-model="newEvent.eventDetails" md-maxlength="1000" rows="5"
@@ -193,8 +202,8 @@
                 </md-input-container>
             </div>
         </div>
-
-        <div class="col-xs-12 contentCard white-bg" STYLE="padding-top: 5px;padding-bottom :20px">
+        <br>
+        <div class="col-xs-12 contentCard white-bg" STYLE="padding-top: 5px;padding-bottom :10px">
             <div class="mdl-cell">
                 <strong>Agregar un horario gratis para todos los usuarios?</strong>
                 <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="activarHoraGratis">
@@ -226,56 +235,58 @@
         </div>
 
 
-<!-- <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-show="!citiesOne">
-   <label>Ciudad</label>
-   <md-select ng-model="newEvent.city" class="city-select">
-     <md-option><em>None</em></md-option>
-     <md-option ng-repeat="city in cities" ng-value="city.name">
-       {{city.name}}
-     </md-option>
-   </md-select>
- </md-input-container> -->
+        <!-- <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-show="!citiesOne">
+           <label>Ciudad</label>
+           <md-select ng-model="newEvent.city" class="city-select">
+             <md-option><em>None</em></md-option>
+             <md-option ng-repeat="city in cities" ng-value="city.name">
+               {{city.name}}
+             </md-option>
+           </md-select>
+         </md-input-container> -->
 
-<!--  <br>
-  <div class="doorman-select">
-    <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-show="myDoormansOne">
-      <label>Doorman</label>
-      <md-select ng-model="selectedDoorman1" multiple>
-        <md-option ng-value="myDoorman.$id" ng-repeat="myDoorman in myDoormans1" selected>{{myDoorman.name}}1</md-option>
-      </md-select>
-    </md-input-container>
-  </div>
+        <!--  <br>
+          <div class="doorman-select">
+            <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-show="myDoormansOne">
+              <label>Doorman</label>
+              <md-select ng-model="selectedDoorman1" multiple>
+                <md-option ng-value="myDoorman.$id" ng-repeat="myDoorman in myDoormans1" selected>{{myDoorman.name}}1</md-option>
+              </md-select>
+            </md-input-container>
+          </div>
 
-  <div class="doorman-select" >
-    <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-hide="myDoormansOne">
-      <label>Doorman</label>
-      <md-select ng-model="selectedDoorman" multiple>
-        <md-option ng-value="myDoorman.$id" ng-repeat="myDoorman in myDoormans" >{{myDoorman.name}}</md-option>
-      </md-select>
-    </md-input-container>
-  </div>
+          <div class="doorman-select" >
+            <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone" ng-hide="myDoormansOne">
+              <label>Doorman</label>
+              <md-select ng-model="selectedDoorman" multiple>
+                <md-option ng-value="myDoorman.$id" ng-repeat="myDoorman in myDoormans" >{{myDoorman.name}}</md-option>
+              </md-select>
+            </md-input-container>
+          </div>
 
-<br> -->
-
-
-<!--
-  <div>
-    <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone ">
-      <label>Descuento Izinat luego de horario cumplido</label>
-      <md-select ng-model="newEvent.descOutHour">
-        <md-option><em>None</em></md-option>
-        <md-option ng-value="descOutHour" ng-repeat="descOutHour in descOutHours">{{descOutHour}}%</md-option>
-      </md-select>
-    </md-input-container>
-  </div> -->
-
-<div class="col-xs-12 mdl-cell mdl-cell--12-col mdl-cell--12-col-phone contentCard white-bg">
-    <center>
-        <button ng-click="saveEvent()"
-                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
-            PUBLICAR
-        </button>
+        <br> -->
 
 
+        <!--
+          <div>
+            <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone ">
+              <label>Descuento Izinat luego de horario cumplido</label>
+              <md-select ng-model="newEvent.descOutHour">
+                <md-option><em>None</em></md-option>
+                <md-option ng-value="descOutHour" ng-repeat="descOutHour in descOutHours">{{descOutHour}}%</md-option>
+              </md-select>
+            </md-input-container>
+          </div> -->
+
+        <div class="col-xs-12 mdl-cell mdl-cell--12-col mdl-cell--12-col-phone contentCard white-bg">
+            <center>
+                <button ng-click="saveEvent()"
+                        class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
+                    PUBLICAR
+                </button>
+
+
+            </center>
+        </div>
     </center>
 </div>
