--- a/app/crearEventos/crearEventos.html
+++ b/app/crearEventos/crearEventos.html
@@ -314,10 +314,10 @@
         <div id="choicesDisplay">
             {{ serviciosEvent }}
         </div>
-        <button ng-click="guardarServicios(serviciosEvent)"
+     <!--   <button ng-click="guardarServicios(serviciosEvent)"
                 class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
             Guardar Servicios
-        </button>
+        </button> -->
 
 
         <div class="col-xs-12 mdl-cell mdl-cell--12-col mdl-cell--12-col-phone contentCard white-bg">
