--- a/app/crearEventos/crearEventos.html
+++ b/app/crearEventos/crearEventos.html
@@ -94,14 +94,11 @@
         </div>
 
         <br>
-        <!--
-
-        /////////////////////////
-        ciudad escondida
-        //////////////////////////////
 
 
-        <div style="visibility: hidden">
+
+
+        <div >
             <md-input-container   class="mdl-cell mdl-cell&#45;&#45;12-col mdl-cell&#45;&#45;12-col-phone"   ng-show="citiesOne">
                 <label>Ciudad</label>
                 <md-select  ng-model="newEvent.city" class="city-select">
@@ -110,15 +107,13 @@
                     </md-option>
                 </md-select>
             </md-input-container>
-            ///////////////
 
 
 
-            /////////////////////
-            club ya deberia estar selecionado
-            ///////////////////
 
-            <div style="float: left; width:50%;overflow:hidden;">
+
+
+            <div >
                 <md-input-container class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
                     <label>Club</label>
                     <md-select ng-model="selectedClub">
@@ -128,7 +123,7 @@
                     </md-select>
                 </md-input-container>
             </div>
-</div>-->
+</div>
 
         <div class="col-xs-12 contentCard white-bg" STYLE="padding-top: 20px;padding-bottom :60px">
 
